--- a/AppNgasal/app/src/main/res/layout/fragment_login.xml
+++ b/AppNgasal/app/src/main/res/layout/fragment_login.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="#FFFFFF"
     tools:context="quewquewcrew.appngasal.view.fragment.auth.LoginFragment">
 
 
@@ -15,7 +16,7 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="70dp"
-            android:layout_marginLeft="65dp"
+            android:layout_marginLeft="55dp"
             android:layout_marginBottom="10dp"
             android:src="@drawable/logoappngasal" />
                 <android.support.design.widget.TextInputLayout
@@ -40,7 +41,7 @@
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:layout_marginTop="30dp"
+                    android:layout_marginTop="25dp"
                     android:layout_marginLeft="20dp"
                     android:src="@mipmap/passwordicon"
                     />
@@ -79,7 +80,7 @@
                     android:id="@+id/login.register"
                     android:layout_width="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:text="REGISTER HERE"
+                    android:text="R E G I S T E R - H E R E"
                     android:textStyle="bold"
                     android:layout_gravity="center_horizontal"
                     android:layout_height="wrap_content"/>
