--- a/AppNgasal/app/src/main/res/layout/fragment_register.xml
+++ b/AppNgasal/app/src/main/res/layout/fragment_register.xml
@@ -2,9 +2,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="20dp"
-    android:paddingRight="20dp"
-    android:paddingTop="16dp"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp"
+    android:paddingTop="70dp"
+    android:background="#FFFFFF"
     android:orientation="vertical"
     tools:context="quewquewcrew.appngasal.view.fragment.auth.RegisterFragment">
 
@@ -12,10 +13,17 @@
         android:id="@+id/register.name.container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
+        <ImageView
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_marginTop="-33dp"
+            android:layout_marginLeft="22dp"
+            android:src="@mipmap/man"
+            />
         <EditText
             android:id="@+id/register.name"
-            android:layout_width="match_parent"
+            android:layout_width="285dp"
+            android:layout_marginLeft="55dp"
             android:layout_height="wrap_content"
             android:inputType="text"
             android:hint="Name"
@@ -28,10 +36,17 @@
         android:id="@+id/register.email.container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
+        <ImageView
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_marginTop="-33dp"
+            android:layout_marginLeft="22dp"
+            android:src="@mipmap/emailicons"
+            />
         <EditText
             android:id="@+id/register.email"
-            android:layout_width="match_parent"
+            android:layout_width="285dp"
+            android:layout_marginLeft="55dp"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
             android:hint="Email"
@@ -44,10 +59,17 @@
         android:id="@+id/register.password.container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
+        <ImageView
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_marginTop="-33dp"
+            android:layout_marginLeft="22dp"
+            android:src="@mipmap/passwordicon"
+            />
         <EditText
             android:id="@+id/register.password"
-            android:layout_width="match_parent"
+            android:layout_width="285dp"
+            android:layout_marginLeft="55dp"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:hint="Password"
@@ -60,38 +82,42 @@
         android:id="@+id/register.repassword.container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
+        <ImageView
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_marginTop="-43dp"
+            android:layout_marginLeft="22dp"
+            android:src="@mipmap/passwordicon"
+            />
         <EditText
             android:id="@+id/register.repassword"
-            android:layout_width="match_parent"
+            android:layout_width="285dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="55dp"
             android:inputType="textPassword"
             android:hint="Re-Password"
             android:textSize="15dp"
+            android:layout_marginBottom="10dp"
             android:ems="10"
             />
     </android.support.design.widget.TextInputLayout>
 
+    <Button
+        android:id="@+id/register.register"
+        android:layout_width="320dp"
+        android:layout_height="35dp"
+        android:layout_marginLeft="20dp"
+        android:textAlignment="center"
+        android:background="#DEA717"
+        android:textColor="#FFFFFF"
+        android:text="Register"/>
     <TextView
         android:id="@+id/register.login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Already have an account? LOGIN NOW!!!"
-        android:textColor="#2E7D32"
-        android:paddingTop="16dp"
-        android:paddingBottom="16dp"
+        android:text="L O G I N"
         android:textAlignment="center"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
+        android:textStyle="bold"
         android:layout_marginBottom="24dp"/>
-
-    <Button
-        android:id="@+id/register.register"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:background="#1E88E5"
-        android:textColor="#FFF"
-        android:text="Register"/>
-
 </LinearLayout>
