--- a/AppNgasal/app/src/main/res/layout/item_futsal_grid.xml
+++ b/AppNgasal/app/src/main/res/layout/item_futsal_grid.xml
@@ -12,30 +12,72 @@
         android:layout_height="wrap_content">
         <ImageView
             android:layout_width="match_parent"
-            android:id="@+id/item.user.grid.image"
+            android:id="@+id/item.lapang.grid.image"
             android:src="@drawable/lap1"
             android:layout_height="200dp" />
+
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="8dp">
+
             <TextView
-                android:layout_width="match_parent"
+                android:id="@+id/item.lapang.grid.name"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
+                android:text="Your Name"
                 android:textSize="18sp"
-                android:id="@+id/item.user.grid.name"
-                android:textStyle="bold"
-                android:text="Your Name"/>
+                android:textStyle="bold" />
             <TextView
+                android:id="@+id/item.lapang.grid.alamat"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:textSize="12sp"
                 android:gravity="left"
-                android:id="@+id/item.user.grid.email"
-                android:text="Your Email"/>
+                android:text="Alamat"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/item.lapang.grid.kecamatan"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="left"
+                android:text="Kecamatan"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/item.lapang.grid.notel"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="left"
+                android:text="No Handphone"
+                android:textSize="12sp" />
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="150dp"
+            android:layout_marginTop="-74dp"
+            android:layout_gravity="right">
+            <TextView
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                android:text="RP."
+                android:textSize="18sp"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/item.lapang.grid.harga"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginTop="-23dp"
+                android:text="Harga"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
