--- a/AppNgasal/app/src/main/res/layout/fragment_login.xml
+++ b/AppNgasal/app/src/main/res/layout/fragment_login.xml
@@ -8,80 +8,88 @@
     android:background="#FFFFFF"
     tools:context="quewquewcrew.appngasal.view.fragment.auth.LoginFragment">
 
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="250dp"
-            android:layout_height="100dp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="70dp"
-            android:layout_marginLeft="55dp"
-            android:layout_marginBottom="10dp"
-            android:src="@drawable/logoappngasal" />
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/login.email.container"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <ImageView
-                        android:layout_width="28dp"
-                        android:layout_height="28dp"
-                        android:layout_marginTop="-36dp"
-                        android:layout_marginLeft="22dp"
-                        android:src="@mipmap/emailicons"
-                        />
-                    <EditText
-                        android:id="@+id/login.email"
-                        android:layout_width="285dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="55dp"
-                        android:hint="Email"
-                        android:inputType="textEmailAddress"/>
-                </android.support.design.widget.TextInputLayout>
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginTop="25dp"
-                    android:layout_marginLeft="20dp"
-                    android:src="@mipmap/passwordicon"
-                    />
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/login.password.container"
-                    android:layout_width="285dp"
-                    android:layout_marginLeft="55dp"
-                    android:layout_marginTop="-55dp"
-                    android:layout_marginBottom="10dp"
-                    app:passwordToggleEnabled="true"
-                    android:layout_height="wrap_content">
-
-                    <EditText
-                        android:id="@+id/login.password"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="250dp"
+                android:layout_height="100dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="70dp"
+                android:layout_marginLeft="55dp"
+                android:layout_marginBottom="10dp"
+                android:src="@drawable/logoappngasal" />
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/login.email.container"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="textPassword"
-                        android:hint="Password"
-                        android:textSize="15sp"
-                        android:ems="10"
+                        android:layout_height="wrap_content">
+                        <ImageView
+                            android:layout_width="28dp"
+                            android:layout_height="28dp"
+                            android:layout_marginTop="-36dp"
+                            android:layout_marginLeft="22dp"
+                            android:src="@mipmap/emailicons"
+                            />
+                        <EditText
+                            android:id="@+id/login.email"
+                            android:layout_width="285dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="55dp"
+                            android:hint="Email"
+                            android:inputType="textEmailAddress"/>
+                    </android.support.design.widget.TextInputLayout>
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginTop="25dp"
+                        android:layout_marginLeft="20dp"
+                        android:src="@mipmap/passwordicon"
                         />
-                </android.support.design.widget.TextInputLayout>
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/login.password.container"
+                        android:layout_width="285dp"
+                        android:layout_marginLeft="55dp"
+                        android:layout_marginTop="-55dp"
+                        android:layout_marginBottom="10dp"
+                        app:passwordToggleEnabled="true"
+                        android:layout_height="wrap_content">
 
-                <Button
-                    android:id="@+id/login.login"
-                    android:layout_width="320dp"
-                    android:layout_height="35dp"
-                    android:text="Login"
-                    android:textStyle="bold"
-                    android:background="#dea717"
-                    android:gravity="center"
-                    android:layout_marginLeft="20dp"
-                    android:textColor="@android:color/background_light"
-                    android:fontFamily="sans-serif" />
-                <TextView
-                    android:id="@+id/login.register"
-                    android:layout_width="wrap_content"
-                    android:layout_marginTop="15dp"
-                    android:text="R E G I S T E R - H E R E"
-                    android:textStyle="bold"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_height="wrap_content"/>
+                        <EditText
+                            android:id="@+id/login.password"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="textPassword"
+                            android:hint="Password"
+                            android:textSize="15sp"
+                            android:ems="10"
+                            />
+                    </android.support.design.widget.TextInputLayout>
+
+                    <Button
+                        android:id="@+id/login.login"
+                        android:layout_width="320dp"
+                        android:layout_height="35dp"
+                        android:text="Login"
+                        android:textStyle="bold"
+                        android:background="#dea717"
+                        android:gravity="center"
+                        android:layout_marginLeft="20dp"
+                        android:textColor="@android:color/background_light"
+                        android:fontFamily="sans-serif" />
+                    <TextView
+                        android:id="@+id/login.register"
+                        android:layout_width="wrap_content"
+                        android:layout_marginTop="15dp"
+                        android:text="R E G I S T E R - H E R E"
+                        android:textStyle="bold"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_height="wrap_content"/>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
