--- a/AppNgasal/app/src/main/res/layout/fragment_register.xml
+++ b/AppNgasal/app/src/main/res/layout/fragment_register.xml
@@ -2,122 +2,166 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="5dp"
-    android:paddingRight="5dp"
-    android:paddingTop="70dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#FFFFFF"
     android:orientation="vertical"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     tools:context="quewquewcrew.appngasal.view.fragment.auth.RegisterFragment">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/register.name.container"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <ImageView
-            android:layout_width="28dp"
-            android:layout_height="28dp"
-            android:layout_marginTop="-33dp"
-            android:layout_marginLeft="22dp"
-            android:src="@mipmap/man"
-            />
-        <EditText
-            android:id="@+id/register.name"
-            android:layout_width="285dp"
-            android:layout_marginLeft="55dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
-            android:hint="Name"
-            android:textSize="15dp"
-            android:ems="10"
-            />
-    </android.support.design.widget.TextInputLayout>
+            android:orientation="vertical">
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="250dp"
+                android:layout_height="100dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="55dp"
+                android:layout_marginTop="50dp"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/logoappngasal" />
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/register.email.container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:layout_width="28dp"
-            android:layout_height="28dp"
-            android:layout_marginTop="-33dp"
-            android:layout_marginLeft="22dp"
-            android:src="@mipmap/emailicons"
-            />
-        <EditText
-            android:id="@+id/register.email"
-            android:layout_width="285dp"
-            android:layout_marginLeft="55dp"
-            android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            android:hint="Email"
-            android:textSize="15dp"
-            android:ems="10"
-            />
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/register.password.container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:layout_width="28dp"
-            android:layout_height="28dp"
-            android:layout_marginTop="-33dp"
-            android:layout_marginLeft="22dp"
-            android:src="@mipmap/passwordicon"
-            />
-        <EditText
-            android:id="@+id/register.password"
-            android:layout_width="285dp"
-            android:layout_marginLeft="55dp"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:hint="Password"
-            android:textSize="15dp"
-            android:ems="10"
-            />
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/register.repassword.container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:layout_width="28dp"
-            android:layout_height="28dp"
-            android:layout_marginTop="-43dp"
-            android:layout_marginLeft="22dp"
-            android:src="@mipmap/passwordicon"
-            />
-        <EditText
-            android:id="@+id/register.repassword"
-            android:layout_width="285dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="55dp"
-            android:inputType="textPassword"
-            android:hint="Re-Password"
-            android:textSize="15dp"
-            android:layout_marginBottom="10dp"
-            android:ems="10"
-            />
-    </android.support.design.widget.TextInputLayout>
-
-    <Button
-        android:id="@+id/register.register"
-        android:layout_width="320dp"
-        android:layout_height="35dp"
-        android:layout_marginLeft="20dp"
-        android:textAlignment="center"
-        android:background="#DEA717"
-        android:textColor="#FFFFFF"
-        android:text="Register"/>
-    <TextView
-        android:id="@+id/register.login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="L O G I N"
-        android:textAlignment="center"
-        android:layout_marginTop="10dp"
-        android:textStyle="bold"
-        android:layout_marginBottom="24dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_height="300dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/register.name.container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:layout_width="28dp"
+                        android:layout_height="28dp"
+                        android:layout_marginTop="-33dp"
+                        android:layout_marginLeft="22dp"
+                        android:src="@mipmap/man"
+                        />
+                    <EditText
+                        android:id="@+id/register.name"
+                        android:layout_width="285dp"
+                        android:layout_marginLeft="55dp"
+                        android:layout_height="wrap_content"
+                        android:inputType="text"
+                        android:hint="Name"
+                        android:textSize="15dp"
+                        android:ems="10"
+                        />
+                </android.support.design.widget.TextInputLayout>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/register.email.container"
+                    android:layout_width="match_parent"
+                    android:orientation="vertical"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:layout_width="28dp"
+                        android:layout_height="28dp"
+                        android:layout_marginTop="-33dp"
+                        android:layout_marginLeft="22dp"
+                        android:src="@mipmap/emailicons"
+                        />
+                    <EditText
+                        android:id="@+id/register.email"
+                        android:layout_width="285dp"
+                        android:layout_marginLeft="55dp"
+                        android:layout_height="wrap_content"
+                        android:inputType="textEmailAddress"
+                        android:hint="Email"
+                        android:textSize="15dp"
+                        android:ems="10"
+                        />
+                </android.support.design.widget.TextInputLayout>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/register.password.container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:passwordToggleEnabled="true">
+                    <ImageView
+                        android:layout_width="28dp"
+                        android:layout_height="28dp"
+                        android:layout_marginTop="-33dp"
+                        android:layout_marginLeft="22dp"
+                        android:src="@mipmap/passwordicon"
+                        />
+                    <EditText
+                        android:id="@+id/register.password"
+                        android:layout_width="285dp"
+                        android:layout_marginLeft="55dp"
+                        android:layout_height="wrap_content"
+                        android:inputType="textPassword"
+                        android:hint="Password"
+                        android:textSize="15dp"
+                        android:ems="10"
+                        />
+                </android.support.design.widget.TextInputLayout>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/register.repassword.container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:passwordToggleEnabled="true">
+                    <ImageView
+                        android:layout_width="28dp"
+                        android:layout_height="28dp"
+                        android:layout_marginTop="-43dp"
+                        android:layout_marginLeft="22dp"
+                        android:src="@mipmap/passwordicon"
+                        />
+                    <EditText
+                        android:id="@+id/register.repassword"
+                        android:layout_width="285dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="55dp"
+                        android:inputType="textPassword"
+                        android:hint="Re-Password"
+                        android:textSize="15dp"
+                        android:layout_marginBottom="10dp"
+                        android:ems="10"
+                        />
+                </android.support.design.widget.TextInputLayout>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                <Button
+                    android:id="@+id/register.register"
+                    android:layout_width="320dp"
+                    android:layout_height="35dp"
+                    android:layout_marginLeft="20dp"
+                    android:textAlignment="center"
+                    android:background="#DEA717"
+                    android:textColor="#FFFFFF"
+                    android:text="Register"/>
+                <TextView
+                    android:id="@+id/register.login"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:text="L O G I N"
+                    android:layout_marginTop="10dp"
+                    android:textAlignment="center"
+                    android:textStyle="bold"
+                    android:layout_marginBottom="24dp"/>
+                </LinearLayout>
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
