--- a/AppNgasal/app/src/main/res/layout/fragment_user_ascgrid.xml
+++ b/AppNgasal/app/src/main/res/layout/fragment_user_ascgrid.xml
@@ -1,15 +1,15 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context="quewquewcrew.appngasal.view.fragment.user.UserASCGrid">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context="quewquewcrew.appngasal.view.fragment.user.UserASCGrid">
 
-<!-- TODO: Update blank fragment layout -->
+    <!-- TODO: Update blank fragment layout -->
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/user.ascgrid.rv">
 
     </android.support.v7.widget.RecyclerView>
-
-</FrameLayout>
+</LinearLayout>
