--- a/AppNgasal/app/src/main/res/layout/item_futsal_grid.xml
+++ b/AppNgasal/app/src/main/res/layout/item_futsal_grid.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_margin="8dp"
+    android:background="@drawable/border"
     android:layout_height="wrap_content">
 
     <LinearLayout
@@ -10,12 +11,18 @@
         android:orientation="vertical"
         android:layout_marginRight="8dp"
         android:layout_height="wrap_content">
-        <ImageView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:id="@+id/item.lapang.grid.image"
-            android:src="@drawable/lap1"
-            android:layout_height="200dp" />
-
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="5dp">
+            <ImageView
+                android:layout_width="match_parent"
+                android:id="@+id/item.lapang.grid.image"
+                android:src="@drawable/lap1"
+                android:layout_marginRight="10dp"
+                android:layout_height="200dp" />
+        </LinearLayout>
         <LinearLayout
             android:layout_width="200dp"
             android:layout_height="wrap_content"
@@ -30,40 +37,19 @@
                 android:text="Your Name"
                 android:textSize="18sp"
                 android:textStyle="bold" />
-            <TextView
-                android:id="@+id/item.lapang.grid.alamat"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="left"
-                android:text="Alamat"
-                android:textSize="12sp" />
 
-            <TextView
-                android:id="@+id/item.lapang.grid.kecamatan"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="left"
-                android:text="Kecamatan"
-                android:textSize="12sp" />
-
-            <TextView
-                android:id="@+id/item.lapang.grid.notel"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="left"
-                android:text="No Handphone"
-                android:textSize="12sp" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="150dp"
-            android:layout_marginTop="-74dp"
+            android:layout_marginTop="-30dp"
             android:layout_gravity="right">
             <TextView
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
                 android:text="RP."
+                android:layout_gravity="right"
                 android:textSize="18sp"
                 android:textStyle="bold" />
             <TextView
@@ -71,7 +57,8 @@
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
-                android:layout_marginTop="-23dp"
+                android:gravity="right"
+                android:layout_marginTop="-20dp"
                 android:text="Harga"
                 android:textSize="18sp"
                 android:textStyle="bold" />
