--- a/AppNgasal/app/src/main/res/menu/menu.xml
+++ b/AppNgasal/app/src/main/res/menu/menu.xml
@@ -2,6 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/action_search"
+        android:icon="@android:drawable/ic_menu_search"
+        android:title="Search"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="always|collapseActionView" />
+    <item
         android:id="@+id/logout"
         android:icon="@drawable/ic_logout"
         android:title="Log Out"/>
