--- a/AppNgasal/app/src/main/res/layout/fragment_user_ascgrid.xml
+++ b/AppNgasal/app/src/main/res/layout/fragment_user_ascgrid.xml
@@ -8,8 +8,7 @@
     <!-- TODO: Update blank fragment layout -->
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_marginTop="50dp"
-        android:layout_height="460dp"
+        android:layout_height="wrap_content"
         android:id="@+id/user.ascgrid.rv">
 
     </android.support.v7.widget.RecyclerView>
