--- a/AppNgasal/app/src/main/res/menu/menu.xml
+++ b/AppNgasal/app/src/main/res/menu/menu.xml
@@ -8,7 +8,14 @@
         app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="always|collapseActionView" />
     <item
+        android:id="@+id/topup"
+        android:title="Top-up"/>
+    <item
+        android:id="@+id/Wallet"
+        android:title="Wallet"/>
+    <item
         android:id="@+id/logout"
         android:icon="@drawable/ic_logout"
         android:title="Log Out"/>
+
 </menu>
