--- a/AppNgasal/app/src/main/res/menu/menu.xml
+++ b/AppNgasal/app/src/main/res/menu/menu.xml
@@ -8,6 +8,10 @@
         app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="always|collapseActionView" />
     <item
+        android:title="Home"
+        android:id="@+id/home"
+        />
+    <item
         android:id="@+id/topup"
         android:title="Top-up"/>
     <item
