--- a/AppNgasal/app/src/main/res/layout/activity_detail_lapangan.xml
+++ b/AppNgasal/app/src/main/res/layout/activity_detail_lapangan.xml
@@ -12,12 +12,12 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
-            android:layout_width="380dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="340dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:background="@drawable/border"
@@ -84,7 +84,7 @@
                     <LinearLayout
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="200dp"
+                        android:layout_marginLeft="250dp"
                         android:layout_marginTop="-65dp"
                         android:layout_marginBottom="3dp"
                         android:orientation="vertical">
@@ -113,13 +113,11 @@
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="90dp"
-                        android:layout_marginLeft="30dp"
                         android:layout_gravity="right"
                         android:layout_height="wrap_content">
 
                         <TextView
                             android:id="@+id/jenis"
-                            android:layout_marginLeft="5dp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Jenis"/>
@@ -140,7 +138,7 @@
 
                     <Button
                         android:id="@+id/btndate"
-                        android:layout_width="115dp"
+                        android:layout_width="145dp"
                         android:layout_height="40dp"
                         android:text="Date"
                         android:background="#dea717"
@@ -150,7 +148,7 @@
 
                     <EditText
                         android:id="@+id/etextdate"
-                        android:layout_width="220dp"
+                        android:layout_width="250dp"
                         android:layout_height="wrap_content" />
                 </LinearLayout>
 
@@ -160,7 +158,7 @@
 
                     <Button
                         android:id="@+id/btntimestrat"
-                        android:layout_width="115dp"
+                        android:layout_width="145dp"
                         android:layout_height="40dp"
                         android:text="Time Start"
                         android:layout_marginBottom="4dp"
@@ -169,16 +167,17 @@
 
                     <EditText
                         android:id="@+id/etexttimestart"
-                        android:layout_width="220dp"
+                        android:layout_width="250dp"
                         android:layout_height="wrap_content" />
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp">
 
                     <Button
                         android:id="@+id/btntimestop"
-                        android:layout_width="115dp"
+                        android:layout_width="145dp"
                         android:layout_height="40dp"
                         android:text="Time Stop"
                         android:background="#dea717"
@@ -186,7 +185,7 @@
 
                     <EditText
                         android:id="@+id/etexttimestop"
-                        android:layout_width="220dp"
+                        android:layout_width="250dp"
                         android:layout_height="wrap_content" />
                 </LinearLayout>
 
@@ -196,7 +195,7 @@
             android:layout_height="wrap_content">
             <Button
                 android:id="@+id/btnbooking"
-                android:layout_marginLeft="195dp"
+                android:layout_marginLeft="253dp"
                 android:layout_width="150dp"
                 android:background="#dea717"
                 android:textColor="#FFFFFF"
