--- a/AppNgasal/app/src/main/res/layout/activity_komfirmasi.xml
+++ b/AppNgasal/app/src/main/res/layout/activity_komfirmasi.xml
@@ -7,12 +7,12 @@
     tools:context="quewquewcrew.appngasal.view.activity.Komfirmasi">
 
     <LinearLayout
-        android:layout_width="380dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="340dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:background="@drawable/border"
@@ -53,7 +53,7 @@
             <LinearLayout
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="200dp"
+                android:layout_marginLeft="260dp"
                 android:layout_marginTop="-30dp"
                 android:orientation="vertical">
 
@@ -92,14 +92,14 @@
         android:textStyle="bold"
         />
     <LinearLayout
-        android:layout_width="340dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/border"
-        android:layout_marginLeft="10dp"
+        android:layout_margin="10dp"
         android:orientation="vertical"
         >
         <LinearLayout
-            android:layout_width="135dp"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
@@ -113,12 +113,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
-                android:text="Waktu Booking :"/>
+                android:text="Waktu Booking           :"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
-                android:text="Total Pembayaran :"/>
+                android:text="Total Pembayaran     :"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="140dp"
@@ -170,7 +170,7 @@
     </LinearLayout>
         <Button
             android:id="@+id/btngtopem"
-            android:layout_width="340dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Pembayaran"
             android:background="#dea717"
