--- a/AppNgasal/app/src/main/res/menu/menu.xml
+++ b/AppNgasal/app/src/main/res/menu/menu.xml
@@ -12,6 +12,12 @@
         android:id="@+id/home"
         />
     <item
+        android:title="Edit Profil"
+        android:id="@+id/editpro"/>
+    <item
+        android:title="Report"
+        android:id="@+id/report"/>
+    <item
         android:id="@+id/topup"
         android:title="Top-up"/>
     <item
