--- a/AppNgasal/app/src/main/res/layout/item_detailpesanan_grid.xml
+++ b/AppNgasal/app/src/main/res/layout/item_detailpesanan_grid.xml
@@ -66,6 +66,7 @@
                 android:layout_height="wrap_content"
                 android:text="Pemesan"/>
             <TextView
+                android:id="@+id/itemreportstatus"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Status"
