--- a/AppNgasal/app/src/main/res/layout/activity_edit_profilv2.xml
+++ b/AppNgasal/app/src/main/res/layout/activity_edit_profilv2.xml
@@ -41,13 +41,13 @@
                             android:layout_width="28dp"
                             android:layout_height="28dp"
                             android:layout_marginTop="-33dp"
-                            android:layout_marginLeft="40dp"
+                            android:layout_marginLeft="30dp"
                             android:src="@mipmap/man"
                             />
                         <EditText
                             android:id="@+id/edtxtname"
-                            android:layout_width="285dp"
-                            android:layout_marginLeft="85dp"
+                            android:layout_width="270dp"
+                            android:layout_marginLeft="65dp"
                             android:layout_height="wrap_content"
                             android:inputType="text"
                             android:hint="Name"
@@ -68,13 +68,13 @@
                             android:layout_width="28dp"
                             android:layout_height="28dp"
                             android:layout_marginTop="-33dp"
-                            android:layout_marginLeft="40dp"
+                            android:layout_marginLeft="30dp"
                             android:src="@mipmap/emailicons"
                             />
                         <EditText
                             android:id="@+id/edtxtemail"
-                            android:layout_width="285dp"
-                            android:layout_marginLeft="85dp"
+                            android:layout_width="270dp"
+                            android:layout_marginLeft="65dp"
                             android:layout_height="wrap_content"
                             android:inputType="textEmailAddress"
                             android:hint="Email"
@@ -94,13 +94,14 @@
                             android:layout_width="28dp"
                             android:layout_height="28dp"
                             android:layout_marginTop="-33dp"
-                            android:layout_marginLeft="40dp"
-                            android:src="@mipmap/passwordicon"
+                            android:layout_marginLeft="30dp"
+                            android:src="@mipmap/phone"
+                            tools:mockup_opacity="40dp"
                             />
                         <EditText
                             android:id="@+id/edtxtnohp"
-                            android:layout_width="285dp"
-                            android:layout_marginLeft="85dp"
+                            android:layout_width="270dp"
+                            android:layout_marginLeft="65dp"
                             android:layout_height="wrap_content"
                             android:hint="No-Hanphone"
                             android:inputType="phone"
@@ -120,14 +121,14 @@
                             android:layout_width="28dp"
                             android:layout_height="28dp"
                             android:layout_marginTop="-43dp"
-                            android:layout_marginLeft="40dp"
-                            android:src="@mipmap/passwordicon"
+                            android:layout_marginLeft="30dp"
+                            android:src="@mipmap/alamats"
                             />
                         <EditText
                             android:id="@+id/edtxtalamat"
-                            android:layout_width="285dp"
+                            android:layout_width="270dp"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="85dp"
+                            android:layout_marginLeft="60dp"
                             android:hint="Alamat"
                             android:textSize="15dp"
                             android:layout_marginBottom="10dp"
