--- a/AppNgasal/app/src/main/res/menu/menu.xml
+++ b/AppNgasal/app/src/main/res/menu/menu.xml
@@ -15,7 +15,7 @@
         android:title="Edit Profil"
         android:id="@+id/editpro"/>
     <item
-        android:title="Report"
+        android:title="History"
         android:id="@+id/report"/>
     <item
         android:id="@+id/topup"
